--- a/cursos_en_progreso/one_oracle_next_education/Front End G7 - ONE/Challenges/challenge-one-portafolio-latam-repositorio-base/style.css
+++ b/cursos_en_progreso/one_oracle_next_education/Front End G7 - ONE/Challenges/challenge-one-portafolio-latam-repositorio-base/style.css
@@ -1,9 +1,24 @@
 /* Este repositório base fué creado para ayudarte en caso que no sepas como comenzar, recuerda que el portafolio es tu carta de presentación y debes darle tu cara, por eso te invitamos a personalizarlo según tu estilo y preferencias no te limites apenas al layout propuesto en figma  
 */
+/* Importaciones*/
+/*Importacionn de fuente */
+@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+
 :root {
     --color-de-fondo: #F5F5F5;
     --color-de-fondo-menu: #ffffff;
     --color-de-link: #000000;
+    --main-color: #002629 ;
+    --second-color: #003347;
+    --third-color: #ffffff;
+    --font-montserrat: "Montserrat", sans-serif;
+    --font-krona: "Krona One", sans-serif;
+}
+
+html {
+    font-size: 62.5%; /* En este caso lo que hacemos es que la fuente sea de 10px (62,5% de 16px) */ 
+
 }
 
 body {
@@ -29,17 +44,26 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 1rem;
-    background-color: var(--color-de-fondo-menu);
+    padding: 0rem;
+    background-color: #242424;
+    color: white;
 }
+
 
 .cabecera__logo {
     max-width: 80px; /* Ajuste para pantallas pequeñas */
 }
 
 .cabecera__titulo {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     text-align: center;
+    margin-bottom: 0;
+    font-weight: bold;
+    text-decoration: solid;
+}
+.cabecera__email{
+    font-size: 1.2rem;
+    margin-top: 0;
 }
 
 .navegacion__lista {
@@ -50,31 +74,308 @@ a {
     font-size: 0.9rem;
 }
 /* ------------------------------ Sección Presentación ------------------------------*/
+.presentacion{
+    display: flex;
+    flex-direction: column;
+    margin: 3rem;
+}
 
+.presentacion__foto{
+    filter: grayscale(100%); /* Aplica el efecto blanco y negro */
+    height: 80%;
+    width: 80%;
+    align-self: center;
+    border-radius: 10%;
+    margin: 2rem;
+    box-shadow: 0px 0px 2rem var(--main-color);
+  }
+
+.presentacion__foto:hover{
+    filter: grayscale(0%); /* Quita el efecto blanco y negro */
+    transform: scale(1.1);
+    z-index: 2;
+    transition: .5s;
+  }
+
+
+.presentacion__titulo{
+    text-align: center;
+    font-size: 2rem;
+}
+
+.presentacion__subtitulo{
+    text-align: center;
+    font-size: 1.3rem;
+}
+
+
+.redes{
+
+    display: flex;
+    justify-content: space-around; /* Centra horizontalmente */
+    align-items: center; /* Centra verticalmente */
+    margin: 0; /* Elimina márgenes externos */
+    padding: 0; /* Elimina relleno interno */
+}
+
+.redes__img:hover{
+    transform: scale(1.2);
+    z-index: 2;
+    transition: .5s;
+}
 
 /* ------------------------------ Sección sobre mí ----------------------------------*/
 
+.sobre-mi{
+    display: flex;
+    flex-direction: column;
+    margin: 3rem;
+}
+
+.sobre-mi__titulo{
+    text-align: center;
+}
+
+.sobre_mi_texto_contenedor{
+    margin-bottom: 1rem;
+}
+
+.sobre-mi__texto{
+    margin-top: 0;
+    text-align: justify;
+}
+
+
+.sobre-mi-quote {
+    background-color: #242424;
+    border-radius: 1rem;
+}
+.quote_text{
+    color: #ffffff;
+    text-align: center;
+    padding: 1rem;
+}
+.quote_description{
+    color: #ffffff;
+    text-align: center;
+}
+
 
 /*------------------------------ Sección de Habilidades ------------------------------*/
+.habilidades__titulo{
+    text-align: center;
+}
 
+.habilidades__lista{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: 0;
+    padding: 1rem;
+    gap: 2rem;
+    justify-content: space-around;
+
+}
+.habilidades__elemento{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 1.5rem;
+    width: 12rem;
+    height: 10rem;
+    background-color: #242424;
+    border-radius: 2rem;
+    box-shadow: 5px 5px #c9c9c9;
+    border: 2px solid white;
+}
+
+.habilidades__elemento:hover{
+    transform: scale(1.2);
+    z-index: 2;
+    transition: .5s;
+    box-shadow: 0px 0px #c9c9c9;
+    background-color: #ffffff;
+
+    .habilidades__nombre{
+        text-align: center;
+        font-weight: bold;
+        color: #2a7ae4;
+    }
+
+    .habilidades__icono{
+        filter: grayscale(0%);
+    }
+}
+
+.habilidades__icono{
+    height: 4rem;
+    align-self: center;
+    filter: grayscale(100%);
+}
+
+.habilidades__nombre{
+    color: #707070;
+    text-align: center;
+    font-weight: bold;
+}
 
 /*------------------------------ Sección de Aficiones --------------------------------*/
 
+.aficiones{
+    background-color: #242424;
+    color: white;
+    text-align: center;
+    padding-top: 1rem;
+}
 
-/*------------------------------ Sección de Proyectos --------------------------------*/
+.aficiones__lista{
+    display: flex;
+    margin: 0;
+    padding: 1rem 2rem 2rem 2rem;
+    justify-content: space-between;
+    align-items: baseline;
+}
+.aficiones__elemento{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
+
+/*------------------------------ Sección de Formacion--------------------------------*/
+.formacion{
+    color: #242424;
+}
+.formacion__titulo{
+    text-align: center;
+}
+
+.formacion__lista{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin: 0;
+    padding: 0;
+    gap: 2rem;
+
+}
+.formacion__elemento{
+    display: flex;
+    flex-direction: column;
+
+}
+
+.formacion__icono{
+    background-color: #ffffff;
+    padding: 2rem 5rem;
+    border-radius: 2rem;
+}
+
+
+
+/*------------------------------ Sección de Experiencia ---------------------------------*/
+
+.proyectos{
+    background-color: white;
+    padding-bottom: 1rem;
+}
+.proyectos__titulo{
+    text-align: center;
+    padding: 2rem;
+    text-decoration: underline rgb(223, 223, 223);
+}
+
+.proyectos__contenedor{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.proyectos__nombre{
+    width: 35rem;
+    background-color: #242424;
+    color: #ffffff;
+    border-radius: 2rem;
+    text-align: center;
+    margin-bottom: 0.5rem;
+}
+
+.proyectos__previsualizacion{
+    width: 35rem;
+    height: 17rem;
+    align-self: center;
+    border-radius: 2rem;
+    margin-bottom: 0;
+}
+
+
+.proyectos_descripcion_contenedor{
+    display: none;
+    justify-content: space-around;
+    background-color: #eeeeee;
+    border-radius: 1rem;
+    width: 35rem;
+    height: 5rem;
+    align-items: center;
+    color: #eeeeee;
+    padding: 2rem;
+    
+}
+.proyectos__contenedor:hover{
+    transform: scale(1.1);
+    z-index: 2;
+    transition: 1s;
+    box-shadow: 0px 0px #c9c9c9;
+    background-color: #ffffff;
+
+    .proyectos_descripcion_contenedor{
+        color: #000000;
+        display: flex;
+        width: 35rem;
+        height: 17rem;
+    }
+    .proyectos__previsualizacion{
+        display: none;
+    }
+    margin: 2rem;
+}
 
 /*------------------------------ Sección de Contacto ---------------------------------*/
+.contacto{
+    background-color: #242424;
+    display: flex;
+    flex-direction: column;
+    color: white;
+}
 
+.contacto__titulo{
+    text-align: center;
+}
+.contacto__formulario{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    gap: 2rem;
+    padding: 2rem;
+}
+.contacto__campo{
+    border-radius: 2rem;
+    text-align: center;
+}
 
 /* ------------------------------ Responsividad ---------------------------------------*/
+@media (min-width: 500px){
+    .presentacion, .sobre-mi, .habilidades, .aficiones, .contacto { padding: 0rem 5rem;
+}}
+
 
 /* Tablets y pantallas más grandes */
 @media (min-width: 768px) {
     .cabecera {
         flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
+        justify-content: space-around;
+        align-items: baseline;
     }
 
     .cabecera__logo {
@@ -90,16 +391,73 @@ a {
         flex-direction: row;
         gap: 1rem;
         margin-top: 0;
+        justify-content: space-around;
+        padding: 1rem;
     }
-
+    
     .navegacion__elemento a {
         font-size: 1rem;
+        color: white;
     }
+    .cabecera__email{
+        font-size: 1rem;
+    }
+
+    
+    /* PResentacion  */
+
+    .presentacion{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .presentacion__foto{
+        filter: grayscale(100%); /* Aplica el efecto blanco y negro */
+        height: 40rem;
+        width: 30rem;
+        align-self: center;
+        border-radius: 10%;
+        margin: 2rem;
+        box-shadow: 0px 0px 2rem var(--main-color);
+      }
+ 
+      /* SOobre Mi  */
+        
+            .sobre-mi{
+                display: flex;
+                flex-direction: column;
+                justify-content: space-around;
+            }
+        
+            .sobre-mi__titulo{
+                text-align: center;
+            }
+            .sobre_mi_texto_contenedor{
+                align-self: center;
+            }
+            .sobre-mi__texto{
+                text-align: justify;
+            }
+
+            .sobre-mi-quote {
+                background-color: #242424;
+                border-radius: 1rem;
+                width: 40rem;
+                align-self: center;
+            }
+
+            
 }
 
 /* Pantallas grandes */
 @media (min-width: 1024px) {
     /* Aquí puedes ajustar aún más el diseño para pantallas grandes */
+    .cabecera{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
     .cabecera__titulo {
         font-size: 1.8rem;
     }
